--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:
 email:
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "wetakeprofit.com" # the base hostname & protocol for your site
+url: "https://wetakeprofit.com" # the base hostname & protocol for your site
 
 twitter_username:
 github_username:
